# macron-receiver

app/macron-receiver-desktop/: package-lock.json  package.json
app/macron-receiver-desktop/src/: App.svelte.old
app/macron-receiver-desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/macron-receiver-desktop/src/lib/: Button.svelte  Greet.svelte  MacronSidebar.svelte
app/macron-reciever/: svelte.config.js  tailwind.config.js
app/macron-reciever/src/: App.svelte  main.ts
app/macron-reciever/src/lib/: ConfigItem.svelte  MacronNavBar.svelte  ScreenSelector.svelte
macrond/: .gitignore  Cargo.toml
macrond/src/: main.rs  message.rs
